--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.1.1",
     "@google/genai": "^1.21.0",
     "lucide-react": "^0.544.0",
-    "html-to-image": "^1.11.11"
+    "html-to-image": "^1.11.11",
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
