--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-ai-paddi-literacy-app",
+  "name": "ai-paddi-literacy-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
